# ch-migrations

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs  macros.rs  main.rs
src/commands/: generate.rs  mod.rs  redo.rs  revert.rs  run.rs  setup.rs
src/operators/: clickhouse_operators.rs  migrations_operators.rs  mod.rs
src/tools/: migrations.rs
