[package]
name = "chm"
version = "0.1.10"
edition = "2021"
authors = ["Trieve <developers@trieve.ai>"]
license = "MIT"
description = "Migrations CLI tool for ClickHouse"
readme = "README.md"
homepage = "https://github.com/devflowinc/ch-migrations"
repository = "https://github.com/devflowinc/ch-migrations"
keywords = ["cli", "migrations", "clickhouse"]
categories = ["command-line-utilities", "database"]

[dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
tokio = { version = "1.37.0", features = ["full"] }
derive_more = { version = "0.99.7" }
toml = { version = "0.8.14" }
serde = { version = "1.0", features = ["derive"] }
clickhouse = { version = "0.11.6", features = ["time"] }
chrono = "0.4.38"
time = "0.3.36"
dotenvy = "0.15.7"
